--- a/landing.html
+++ b/landing.html
@@ -25,7 +25,8 @@
 
   		<div>
   			<ul class="nav navbar-nav pull-right">
-  				<li><a href="signup.html">Sign Up</a></li>
+  				<li><a href="#about-us">About Us</a></li>
+  				<li><a href="signup.php">Sign Up</a></li>
   				<li><a href="#login">Login</a></li>
   			</ul>
   		</div>
@@ -40,6 +41,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
+            	<a name="about-us"></a>
                 <h3 class="header-text">About Us</h3>
                 <blockquote>
                     Our goal is to unite the problem solvers of the world with the problems they are most equipped to solve.
@@ -48,7 +50,7 @@
 
             <div class="col-md-6">
             	<h3 class="header-text">Clean Water Login</h3>
-                <form class="form-group form-style img-rounded" role="form">
+                <form class="form-group form-style img-rounded" role="form" action="home.html">
                     <a name="login"></a>
                     <h4>Enter your username and password to login:</h4>
                     <p></p>
@@ -69,12 +71,12 @@
                         </div> 
                     </div>
 
-	                    <button type="button" class="btn btn-default button-style">Cancel</button>
-	                    <button type="submit" class="btn btn-primary button-style">Submit</button>
-	                    <a href="signup.html">Sign Up</a>
-                    </div>
+	                <button type="button" class="btn btn-default button-style" onclick="window.location.href='landing.html'">Cancel</button>
 
-                </form>
+	                <button type="submit" class="btn btn-primary button-style">Login</button>
+
+	                <a href="signup.php">Sign Up</a>
+				</form>
             </div>
         </div>
     </div>
