--- a/home.html
+++ b/home.html
@@ -31,6 +31,8 @@
   	</nav>
     <h1>Home Page</h1>
 
+    <a href="cleanWaterMain.php">Display the current database</a>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
