--- a/landing.html
+++ b/landing.html
@@ -26,7 +26,8 @@
   		<div>
   			<ul class="nav navbar-nav pull-right">
   				<li><a href="#about-us">About Us</a></li>
-  				<li><a href="signup.php">Sign Up</a></li>
+  				<li><a href="locationSignup.php">Add Project</a></li>
+  				<li><a href="signup.php">Volunteer Sign Up</a></li>
   				<li><a href="#login">Login</a></li>
   			</ul>
   		</div>
