Created filter bar in home.html

--- a/home.html
+++ b/home.html
@@ -31,6 +31,18 @@
   	</nav>
     <h1>Home Page</h1>
 
+    <nav class="navbar navbar-default" role="navigation">
+      <div>
+        <ul class="nav navbar-nav pull-left">
+          <li><a href="">Filters: </a></li>
+          <li><a href="">Occupation</a></li>
+          <li><a href="">Region</a></li>
+          <li><a href="">Season</a></li>
+          <li><a href="">Date Range</a></li>
+        </ul>
+      </div>
+    </nav>
+
     <a href="cleanWaterMain.php">Display the current database</a>
 
 
