--- a/home.html
+++ b/home.html
@@ -35,20 +35,39 @@
       <div>
         <ul class="nav navbar-nav pull-left">
           <li><a href="">Filters: </a></li>
-          <li><a href="">Occupation</a></li>
-          <li><a href="">Region</a></li>
-          <li><a href="">Season</a></li>
-          <li><a href="">Date Range</a></li>
+          <li><a href="" id="occupation">Occupation</a></li>
+          <li><a href="" id="region">Region</a></li>
+          <li><a href="" id="season">Season</a></li>
+          <li><a href="" id="dateRange">Date Range</a></li>
         </ul>
       </div>
     </nav>
 
+    <table align="center" id="volunteers">
+      <h2> Volunteers </h2>
+      <tr>
+        <th>ID </th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+        <th>Occupation</th>
+        <th>Season</th>
+        <th>Days</th>
+        <th>Region</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+      </tr>
+      
+    </table>
+
+
     <a href="cleanWaterMain.php">Display the current database</a>
 
+    <script src="home.js"></script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
   </body>
 </html>
