updated home.php with drop-down email addresses

--- a/landing.html
+++ b/landing.html
@@ -51,7 +51,7 @@
 
             <div class="col-md-6">
             	<h3 class="header-text">Clean Water Login</h3>
-                <form class="form-group form-style img-rounded" role="form" action="home.html">
+                <form class="form-group form-style img-rounded" role="form" action="home.php">
                     <a name="login"></a>
                     <h4>Enter your username and password to login:</h4>
                     <p></p>
@@ -77,7 +77,7 @@
 	                <button type="submit" class="btn btn-primary button-style">Login</button>
 
 	                <a href="signup.php">Sign Up</a>
-				</form>
+				        </form>
             </div>
         </div>
     </div>
