trying to use landing page to pass email

--- a/landing.html
+++ b/landing.html
@@ -51,9 +51,10 @@
 
             <div class="col-md-6">
             	<h3 class="header-text">Clean Water Login</h3>
-                <form class="form-group form-style img-rounded" role="form" action="home.php">
+                <form class="form-group form-style img-rounded" role="form" method="post" action="home.php">
                     <a name="login"></a>
-                    <h4>Enter your username and password to login:</h4>
+                    <!-- <h4>Enter your username and password to login:</h4> -->
+                    <h4>Enter your email to login:</h4>
                     <p></p>
 
                     <div class="form-group row">
@@ -63,14 +64,14 @@
                         </div>
                     </div>
 
-                    <div class="form-group row">
+                    <!-- <div class="form-group row">
                         <div class="col-md-2">
                             <label for="password">Password:</label>
                         </div>
                         <div class="col-md-8">
                             <input class="form-control" type="password" id="password" placeholder="password">
-                        </div> 
-                    </div>
+                        </div>
+                    </div> -->
 
 	                <button type="button" class="btn btn-default button-style" onclick="window.location.href='landing.html'">Cancel</button>
 
