--- a/landing.html
+++ b/landing.html
@@ -51,7 +51,7 @@
 
             <div class="col-md-6">
             	<h3 class="header-text">Clean Water Login</h3>
-                <form class="form-group form-style img-rounded" role="form" method="post" action="home.php">
+                <form class="form-group form-style img-rounded" role="form" method="post" action="populate_tables.php">
                     <a name="login"></a>
                     <!-- <h4>Enter your username and password to login:</h4> -->
                     <h4>Enter your email to login:</h4>
@@ -77,7 +77,7 @@
 
 	                <button type="submit" class="btn btn-primary button-style">Login</button>
 
-	                <a href="signup.php">Sign Up</a>
+	                <!-- <a href="signup.php">Sign Up</a> -->
 				        </form>
             </div>
         </div>
