Changing form on landing page

--- a/landing.html
+++ b/landing.html
@@ -51,7 +51,7 @@
 
             <div class="col-md-6">
             	<h3 class="header-text">Clean Water Login</h3>
-                <form class="form-group form-style img-rounded" role="form" method="post" action="populate_tables.php">
+                <form action="populate_tables.php" method="post" class="form-group form-style img-rounded" role="form">
                     <a name="login"></a>
                     <!-- <h4>Enter your username and password to login:</h4> -->
                     <h4>Enter your email to login:</h4>
@@ -75,7 +75,7 @@
 
 	                <button type="button" class="btn btn-default button-style" onclick="window.location.href='landing.html'">Cancel</button>
 
-	                <button type="submit" class="btn btn-primary button-style">Login</button>
+	                <input type="submit" class="btn btn-primary button-style">Login</button>
 
 	                <!-- <a href="signup.php">Sign Up</a> -->
 				        </form>
