Changing form more

--- a/landing.html
+++ b/landing.html
@@ -60,7 +60,8 @@
                     <div class="form-group row">
                         <label class="col-md-2" for="email">Email:</label>
                         <div class="col-md-8">
-                            <input class="form-control col-md-6" type="email" id="email" placeholder="email">
+                            <!-- <input class="form-control col-md-6" type="email" id="email" placeholder="email"> -->
+                            <input type="email" id="email" name="email">
                         </div>
                     </div>
 
