--- a/landing.html
+++ b/landing.html
@@ -74,9 +74,9 @@
                         </div>
                     </div> -->
 
-	                <button type="button" class="btn btn-default button-style" onclick="window.location.href='landing.html'">Cancel</button>
+	                <!-- <button type="button" class="btn btn-default button-style" onclick="window.location.href='landing.html'">Cancel</button> -->
 
-	                <input type="submit" class="btn btn-primary button-style">Login</button>
+	                <input type="submit" class="btn btn-primary button-style" value="Login">
 
 	                <!-- <a href="signup.php">Sign Up</a> -->
 				        </form>
