--- a/landing.html
+++ b/landing.html
@@ -51,7 +51,7 @@
 
             <div class="col-md-6">
             	<h3 class="header-text">Clean Water Login</h3>
-                <form action="populate_tables.php" method="post" class="form-group form-style img-rounded" role="form">
+                <form action="home.php" method="post" class="form-group form-style img-rounded" role="form">
                     <a name="login"></a>
                     <!-- <h4>Enter your username and password to login:</h4> -->
                     <h4>Enter your email to login:</h4>
@@ -78,7 +78,7 @@
 
 	                <input type="submit" class="btn btn-primary button-style" value="Login">
 
-	                <!-- <a href="signup.php">Sign Up</a> -->
+	                <a href="signup.php">Sign Up</a>
 				        </form>
             </div>
         </div>
