database link and styling

--- a/landing.html
+++ b/landing.html
@@ -61,7 +61,7 @@
                         <label class="col-md-2" for="email">Email:</label>
                         <div class="col-md-8">
                             <!-- <input class="form-control col-md-6" type="email" id="email" placeholder="email"> -->
-                            <input type="email" id="email" name="email">
+                            <input class="form-control col-md-6" type="email" id="email" name="email">
                         </div>
                     </div>
 
